# ddmrp

./: README.md
ddmrp/: README.rst  __manifest__.py
ddmrp/i18n/: ddmrp.pot  es.po  es_AR.po  fr.po  id.po  it.po  zh_Hans.po
ddmrp/models/: stock_buffer.py  stock_move.py
ddmrp/readme/: HISTORY.md
ddmrp/tests/: common.py  test_ddmrp.py
ddmrp/views/: product_adu_calculation_method_view.xml  stock_buffer_profile_view.xml  stock_buffer_view.xml  stock_move_views.xml
ddmrp_adjustment/: README.rst  __manifest__.py
ddmrp_adjustment/i18n/: ddmrp_adjustment.pot  es.po  it.po  pt_BR.po
ddmrp_adjustment/models/: ddmrp_adjustment.py  ddmrp_adjustment_demand.py  stock_buffer.py
ddmrp_adjustment/readme/: DESCRIPTION.md  HISTORY.md  USAGE.md
ddmrp_adjustment/security/: ir.model.access.csv
ddmrp_adjustment/tests/: __init__.py  test_adu_dlt_adjustment.py  test_common.py
ddmrp_adjustment/views/: ddmrp_adjustment_demand_view.xml  ddmrp_adjustment_view.xml  stock_buffer_view.xml
ddmrp_adjustment/wizards/: ddmrp_adjustment_sheet.py  ddmrp_adjustment_wizard_view.xml
ddmrp_adjustment_matrix/: README.rst  __manifest__.py
ddmrp_adjustment_matrix/i18n/: ddmrp_adjustment_matrix.pot  it.po
ddmrp_adjustment_matrix/readme/: DESCRIPTION.md
ddmrp_adjustment_matrix/security/: ir.model.access.csv
ddmrp_adjustment_matrix/tests/: __init__.py  test_adjustment_wizard.py
ddmrp_adjustment_matrix/wizards/: ddmrp_adjustment_sheet.py  ddmrp_adjustment_wizard_view.xml
ddmrp_chatter/: README.rst
ddmrp_coverage_days/: README.rst
ddmrp_cron_actions_as_job/: README.rst
ddmrp_exclude_moves_adu_calc/: README.rst
ddmrp_exclude_moves_adu_calc/i18n/: it.po
ddmrp_exclude_moves_adu_calc_sales/: README.rst
ddmrp_history/: README.rst
ddmrp_packaging/: README.rst
ddmrp_packaging/readme/: INSTALL.md
ddmrp_packaging_product_replace/: README.rst
ddmrp_packaging_product_replace/readme/: DESCRIPTION.md
ddmrp_product_replace/: README.rst  __manifest__.py
ddmrp_product_replace/i18n/: ddmrp_product_replace.pot  es.po  it.po  pt_BR.po
ddmrp_product_replace/models/: stock_buffer.py
ddmrp_product_replace/views/: stock_buffer_view.xml
ddmrp_purchase_hide_onhand_status/: README.rst
ddmrp_report_part_flow_index/: README.rst  __manifest__.py
ddmrp_report_part_flow_index/reports/: report_ddmrp_part_plan_flow_index.py  report_ddmrp_part_plan_flow_index_views.xml
ddmrp_warning/: README.rst
ddmrp_warning_as_job/: README.rst
setup/_metapackage/: pyproject.toml
stock_buffer_capacity_limit/: README.rst  __manifest__.py
stock_buffer_route/: README.rst
stock_buffer_sales_analysis/: README.rst
(+23 files in other folders)
