[project]
name = "odoo-addons-oca-ddmrp"
version = "18.0.20250311.0"
dependencies = [
    "odoo-addon-ddmrp==18.0.*",
    "odoo-addon-ddmrp_chatter==18.0.*",
    "odoo-addon-ddmrp_cron_actions_as_job==18.0.*",
    "odoo-addon-ddmrp_exclude_moves_adu_calc==18.0.*",
    "odoo-addon-ddmrp_history==18.0.*",
    "odoo-addon-ddmrp_warning==18.0.*",
    "odoo-addon-ddmrp_warning_as_job==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
